--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 	font-size: 21px;
 }
 body {
-	background-color: #DDD;
+	background-color: #abb;
 	margin: 0;
 
 	font-family: 'Rubik', sans-serif;
@@ -26,6 +26,8 @@ body {
 	align-items: center;
 	flex-direction: column;
 
+	text-align: center;
+
 	width: 100vw;
 	height: 3rem;
 }
@@ -40,7 +42,7 @@ body {
 
 #chatScrollBox {
 	display: block;
-	height: calc(100vh - 3rem - 2rem);
+	height: calc(100vh - 3rem - 3.5rem);
 
 	background-color: #eef;
 	border-radius: 1rem;
@@ -70,6 +72,13 @@ body {
 	align-items: center;
 	gap: 0.5rem;
 }
+.mainCharacter {
+	flex-direction: row-reverse !important;
+	margin-left: auto !important;
+}
+.mainCharacter > .dialogueContainer {
+	align-items: flex-end !important;
+}
 
 .profile {
 	width: 4rem;
@@ -85,15 +94,21 @@ body {
 	object-fit: cover;
 }
 
-.messageContainer {
+.dialogueContainer {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
 	align-items: flex-start;
 	gap: 0.25rem;
 }
-.messageContainer > .name {
+.dialogueContainer > .name {
 	font-weight: 800;
+}
+
+.narratorContainer{
+	margin: 0 auto;
+	font-style: italic;
+	font-size: 0.75rem;
 }
 
 /* REPLY BAR */
@@ -105,19 +120,22 @@ body {
 	align-items: center;
 	flex-direction: row;
 
-	height: 2rem;
+	height: 3.5rem;
 }
 .select {
 	border: 2px solid #111;
 	border-radius: 2rem;
 
+	margin: 0 2px;
 	padding: 0.2rem 1rem;
 
-    transition: 0.3s;
+	text-align: center;
+
+	transition: 0.3s;
 }
 .select:hover {
-    cursor: pointer;
+	cursor: pointer;
 
-    color: #DDD;
-    background-color: #111;
+	color: #ddd;
+	background-color: #111;
 }
