--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 	text-align: center;
 
 	width: 100vw;
-	height: 3rem;
+	height: 4.5rem;
 }
 #banner > span:first-child {
 	font-weight: 700;
@@ -42,7 +42,7 @@ body {
 
 #chatScrollBox {
 	display: block;
-	height: calc(100vh - 3rem - 3.5rem);
+	height: calc(100vh - 4.5rem - 5rem);
 
 	background-color: #eef;
 	border-radius: 1rem;
@@ -87,6 +87,7 @@ body {
 }
 
 .profile {
+	flex: 0 0 4rem;
 	width: 4rem;
 	height: 4rem;
 
@@ -128,9 +129,21 @@ body {
 	flex-wrap: nowrap;
 	justify-content: space-evenly;
 	align-items: center;
+	flex-direction: column-reverse;
+
+	height: 5rem;
+}
+#replyOptions {
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+	align-items: center;
 	flex-direction: row;
 
-	height: 3.5rem;
+	width: 100%;
+}
+.selectTitle {
+	margin: 0;
 }
 .select {
 	border: 2px solid #111;
