--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
 	line-height: 1.05rem;
 
 	overflow: hidden; /* if any */
+
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
 }
 
 /* BANNER */
