--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
 
 html {
 	font-size: 21px;
-
-	height: -webkit-fill-available;
 }
 body {
 	background-color: #abb;
@@ -17,9 +15,6 @@ body {
 	line-height: 1.05rem;
 
 	overflow: hidden; /* if any */
-
-	min-height: 100vh;
-	min-height: -webkit-fill-available;
 }
 
 /* BANNER */
@@ -47,8 +42,7 @@ body {
 
 #chatScrollBox {
 	display: block;
-	height: calc(100vh - 4.5rem - 5rem);
-	min-height: -webkit-fill-available;
+	height: calc(100dvh - 4.5rem - 5rem);
 
 	background-color: #eef;
 	border-radius: 1rem;
@@ -63,7 +57,7 @@ body {
 	display: none; /* safari & chrome */
 }
 #chatScrollBox.hidReplyBar {
-	height: calc(100vh - 4.5rem);
+	height: calc(100dvh - 4.5rem);
 	border-radius: 1rem 1rem 0 0;
 }
 #chatContainer {
